# ncopa

./: Makefile  README.md  gpt_tree.py  pyproject.toml  tree.txt
.github/workflows/: python-package.yaml
src/ncopa/: __init__.py  directive.py  format.py  parse.py  parser.py  tree.py  version.py
src/sandbox/: comment.ipynb  comment.py
src/test/: test_comments.py  test_detect_comment.py  test_parse_comment.py  test_parse_nested.py  test_parse_single.py  test_predicates.py  test_to_string.py
src/test/data/: formatted.conf  poor_format.conf  simple.conf  with_blank_lines.conf
