[project]
name = "ncopa"
version = "0.4.0"
description = "ncopa: nginx.conf parser"
readme = "README.md"
authors = [
    { name = "Hai Vu", email = "haivu2004@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ntree = "ncopa.tree:main"
nformat = "ncopa.format:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab[all]>=4.3.5",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
